se mejoraron los endpoints de las url y tambien en la doc (#10)
